--- a/_config.yml
+++ b/_config.yml
@@ -264,6 +264,7 @@ duoshuo_share: true
 sogou_site_verification: kCeD6iIyca
 baidu_site_verification: fG9XIkTI0Y
 qihu_site_verification: e7723e0b265664f01d5b979e8c588b38
+ms_site_verification: B5194860190783A4C749EE5976B5F97F
 
 
 # Google Analytics
