--- a/_config.yml
+++ b/_config.yml
@@ -260,7 +260,7 @@ duoshuo_share: true
 
 # Google Webmaster tools verification setting
 # See: https://www.google.com/webmasters/
-google_site_verification: AHRF6FnSA1Skfdl3bWRVi2l88_MDvUHwzgUeuUfQqyo 
+google_site_verification: AHRF6FnSA1Skfdl3bWRVi2l88_MDvUHwzgUeuUfQqyo
 sogou_site_verification: kCeD6iIyca
 baidu_site_verification: fG9XIkTI0Y
 qihu_site_verification: e7723e0b265664f01d5b979e8c588b38
@@ -268,7 +268,7 @@ ms_site_verification: B5194860190783A4C749EE5976B5F97F
 
 
 # Google Analytics
-#google_analytics:
+google_analytics: UA-77410854-1
 
 # CNZZ count
 #cnzz_siteid:
